Fix page jump on mobile devices caused by typewriter effect

--- a/wp-content/themes/wally/assets/sass/06-wp/plugins/_instagram-feed.scss
+++ b/wp-content/themes/wally/assets/sass/06-wp/plugins/_instagram-feed.scss
@@ -3,6 +3,10 @@ INSTAGRAM FEED
 ========================================================================== */
 
 #sb_instagram {
+	margin-top: spacing(10);
+	@include for-tablet-portrait-up {
+		margin-top: spacing(12);
+	}
 
 	.sb_instagram_header {
 		margin-bottom: var(--spacing-m) !important;
